After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689873 - gstrtspmessage: Several functions are missing introspection annotations...
gstrtspmessage: Several functions are missing introspection annotations...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal minor
: 1.0.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-12-07 23:50 UTC by Sebastian Rasmussen
Modified: 2012-12-10 10:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch adding the annotations. (3.51 KB, patch)
2012-12-07 23:50 UTC, Sebastian Rasmussen
none Details | Review

Description Sebastian Rasmussen 2012-12-07 23:50:16 UTC
Several functions in gstrtspmessage are missing annotations, e.g.
gst_rtsp_message_init_response() and gst_rtsp_message_add_header().
Comment 1 Sebastian Rasmussen 2012-12-07 23:50:57 UTC
Created attachment 231012 [details] [review]
Proposed patch adding the annotations.
Comment 2 Wim Taymans 2012-12-10 10:00:52 UTC
commit d4b6f3c1a0ef75d0b5d9dabcd732931b664d644e
Author: Sebastian Rasmussen <sebras@hotmail.com>
Date:   Sat Dec 8 00:21:17 2012 +0100

    rtspmessage: Add several missing g-i annotations
    
    https://bugzilla.gnome.org/show_bug.cgi?id=689873