rtspmessage: Add several missing g-i annotations

https://bugzilla.gnome.org/show_bug.cgi?id=689873